code. Add syncer test. Add BCL for async

--- a/Diagnosis.Client.App/App.config
+++ b/Diagnosis.Client.App/App.config
@@ -20,9 +20,7 @@
   </system.diagnostics>
   <connectionStrings>
     <clear />
-    <add name="client"
-         providerName="System.Data.SqlServerCE.4.0"
-         connectionString="Data Source=%LOCALAPPDATA%\NBI_KemSU\Diagnosis\Client\diagnosis.sdf;Persist Security Info=False;" />
+    <add name="client" providerName="System.Data.SqlServerCE.4.0" connectionString="Data Source=%LOCALAPPDATA%\NBI_KemSU\Diagnosis\Client\diagnosis.sdf;Persist Security Info=False;" />
   </connectionStrings>
   <log4net>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
@@ -82,6 +80,14 @@
         <bindingRedirect oldVersion="3.5.1.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <probing privatePath="bin;lib;libs" />
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.6.8.0" newVersion="2.6.8.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.6.8.0" newVersion="2.6.8.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <userSettings>
