--- a/Diagnosis.Client.App/packages.config
+++ b/Diagnosis.Client.App/packages.config
@@ -5,6 +5,9 @@
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net40" />
   <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net40" />
+  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net40" />
   <package id="MSBuildTasks" version="1.4.0.88" targetFramework="net40" />
