--- a/Diagnosis.ViewModels/packages.config
+++ b/Diagnosis.ViewModels/packages.config
@@ -4,5 +4,8 @@
   <package id="FluentValidation" version="5.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
 </packages>
