--- a/Diagnosis.Common.Presentation/packages.config
+++ b/Diagnosis.Common.Presentation/packages.config
@@ -4,4 +4,7 @@
   <package id="Extended.Wpf.Toolkit" version="2.3" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net40" />
+  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
 </packages>
