--- a/Diagnosis.Common/Diagnosis.Common.csproj
+++ b/Diagnosis.Common/Diagnosis.Common.csproj
@@ -165,29 +165,30 @@
     <Compile Include="Types\DisposableBase.cs" />
     <Compile Include="Types\INCCReadOnlyObservableCollection.cs" />
     <Compile Include="Mediator\Events.cs" />
-    <Compile Include="Util\ActionWrapper.cs" />
-    <Compile Include="Util\AssemblyHelper.cs" />
-    <Compile Include="Util\Comparers.cs" />
+    <Compile Include="Util\FlagActionWrapper.cs" />
+    <Compile Include="Types\AssemblyInfo.cs" />
+    <Compile Include="Extensions\Comparers.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Util\EventArgs.cs" />
-    <Compile Include="Util\ExpressionHelper.cs" />
-    <Compile Include="Util\DateHelper.cs" />
+    <Compile Include="Types\EventArgs.cs" />
+    <Compile Include="Helpers\ExpressionHelper.cs" />
+    <Compile Include="Helpers\DateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
     <Compile Include="Types\NotifyPropertyChangedBase.cs" />
     <Compile Include="Mediator\EventMessageHandlersManager.cs" />
-    <Compile Include="Util\FileHelper.cs" />
-    <Compile Include="Util\LocalizableDescriptionAttribute.cs" />
+    <Compile Include="Helpers\FileHelper.cs" />
+    <Compile Include="Attributes\LocalizableDescriptionAttribute.cs" />
     <Compile Include="Util\PasswordService.cs" />
     <Compile Include="Util\PerformanceTester.cs" />
     <Compile Include="Util\ReentrantFlag.cs" />
-    <Compile Include="Util\ReflectionHelper.cs" />
+    <Compile Include="Helpers\ReflectionHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
