--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Model\VocabularyTest.cs" />
     <Compile Include="Search\DiagnosisSearchTest.cs" />
     <Compile Include="ViewModels\AutocompleteTest.cs" />
+    <Compile Include="ViewModels\ViewModelTest.cs" />
     <Compile Include="ViewModels\VocabularyListTest.cs" />
     <Compile Include="ViewModels\HrListTest.cs" />
     <Compile Include="ViewModels\CardTest.cs" />
