--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -125,6 +125,10 @@
     <Reference Include="System.Data.SQLite">
       <HintPath>..\libs\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.SqlServer.Compact.4.0.8876.1\lib\net40\System.Data.SqlServerCe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net" />
   </ItemGroup>
   <Choose>
@@ -147,6 +151,8 @@
     <Compile Include="Common\DateOffsetFormatterTest.cs" />
     <Compile Include="Common\TimeSpanFormatterTest.cs" />
     <Compile Include="Common\EnumerableExtensionsTest.cs" />
+    <Compile Include="Data\QueryTest.cs" />
+    <Compile Include="DbTest.cs" />
     <Compile Include="Model\RelationsTest.cs" />
     <Compile Include="Data\SyncerTest.cs" />
     <Compile Include="Data\VocLoaderTest.cs" />
@@ -159,7 +165,7 @@
     <Compile Include="Model\HealthRecordTest.cs" />
     <Compile Include="Model\HrCategoryTest.cs" />
     <Compile Include="Model\VocabularyTest.cs" />
-    <Compile Include="Search\DiagnosisSearchTest.cs" />
+    <Compile Include="ViewModels\FilterTest.cs" />
     <Compile Include="ViewModels\AutocompleteTest.cs" />
     <Compile Include="ViewModels\ViewModelTest.cs" />
     <Compile Include="ViewModels\VocabularyListTest.cs" />
@@ -175,7 +181,6 @@
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
     <Compile Include="Data\HrQueryTest.cs" />
-    <Compile Include="Data\StartsWithTest.cs" />
     <Compile Include="Common\StringExtensionTest.cs" />
     <Compile Include="ViewModels\HrEditorTest.cs" />
     <Compile Include="Common\OrderedBagTest.cs" />
@@ -215,6 +220,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Search\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
@@ -238,7 +246,11 @@
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <PropertyGroup>
     <PostBuildEvent>REM copy sqlite.dll
-xcopy "$(SolutionDir)libs\SQLite.Interop.dll" "$(TargetDir)" /i /d /y</PostBuildEvent>
+xcopy "$(SolutionDir)libs\SQLite.Interop.dll" "$(TargetDir)" /i /d /y
+    if not exist "$(TargetDir)x86" md "$(TargetDir)x86"
+    xcopy /s /y "$(SolutionDir)packages\Microsoft.SqlServer.Compact.4.0.8876.1\NativeBinaries\x86\*.*" "$(TargetDir)x86"
+    if not exist "$(TargetDir)amd64" md "$(TargetDir)amd64"
+    xcopy /s /y "$(SolutionDir)packages\Microsoft.SqlServer.Compact.4.0.8876.1\NativeBinaries\amd64\*.*" "$(TargetDir)amd64"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
