--- a/Diagnosis.Tests/packages.config
+++ b/Diagnosis.Tests/packages.config
@@ -3,5 +3,6 @@
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
 </packages>
