--- a/Diagnosis.Client.App/Diagnosis.Client.App.csproj
+++ b/Diagnosis.Client.App/Diagnosis.Client.App.csproj
@@ -278,6 +278,7 @@
     <Compile Include="Controls\FormParts\ConfirmPasswordControl.xaml.cs">
       <DependentUpon>ConfirmPasswordControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\DateOffsetConverters.cs" />
     <Compile Include="DesignData\SampleViewModels.cs" />
     <Compile Include="Resources\Themes\Helpers.cs" />
     <Compile Include="Screens\Vocabs.xaml.cs">
