--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -221,6 +221,7 @@
     <Compile Include="DataTransfer\HrData.cs" />
     <Compile Include="DataTransfer\TagData.cs" />
     <Compile Include="Extensions\Extensions.cs" />
+    <Compile Include="Formatters\DateOffsetFormatter.cs" />
     <Compile Include="Framework\MenuItem.cs" />
     <Compile Include="Framework\VisibleRelayCommand.cs" />
     <Compile Include="Framework\WindowViewModel.cs" />
