autocomplete. allowTagConvertion in search, remove OnlyWords from recognizer

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -334,7 +334,9 @@
     <None Include="Framework\CodeMap1.dgml" />
     <None Include="packages.config" />
     <None Include="Screens\Card\Card.cd" />
-    <None Include="Autocomplete\CodeMap1.dgml" />
+    <None Include="Autocomplete\CodeMap1.dgml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Screens\Card\CodeMap1.dgml" />
     <None Include="Search\SearchClassDiagram.cd" />
   </ItemGroup>
