--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -299,6 +299,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Versions\Sql\inmem_sqlce.sql" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Versions\Sql\inmem_sqlce_server.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
