--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Model\HealthRecordTest.cs" />
     <Compile Include="Model\HrCategoryTest.cs" />
     <Compile Include="Model\VocabularyTest.cs" />
+    <Compile Include="ViewModels\DateOffsetVMTest.cs" />
     <Compile Include="ViewModels\FilterTest.cs" />
     <Compile Include="ViewModels\AutocompleteTest.cs" />
     <Compile Include="ViewModels\ViewModelTest.cs" />
