tests. Test project per assembly

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,9 +3,12 @@
   <repository path="..\Diagnosis.Client.App\packages.config" />
   <repository path="..\Diagnosis.Common.Presentation\packages.config" />
   <repository path="..\Diagnosis.Common\packages.config" />
+  <repository path="..\Diagnosis.Data.Tests\packages.config" />
   <repository path="..\Diagnosis.Data\packages.config" />
+  <repository path="..\Diagnosis.Models.Tests\packages.config" />
   <repository path="..\Diagnosis.Models\packages.config" />
   <repository path="..\Diagnosis.Server.App\packages.config" />
   <repository path="..\Diagnosis.Tests\packages.config" />
+  <repository path="..\Diagnosis.ViewModels.Tests\packages.config" />
   <repository path="..\Diagnosis.ViewModels\packages.config" />
 </repositories>
