--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -192,7 +192,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Diagnosis.Client.App\Diagnosis.Client.App.csproj">
       <Project>{d7949590-a383-4e34-9c06-a2568db5cdb6}</Project>
-      <Name>Diagnosis.App</Name>
+      <Name>Diagnosis.Client.App</Name>
     </ProjectReference>
     <ProjectReference Include="..\Diagnosis.Common\Diagnosis.Common.csproj">
       <Project>{a91ad3b7-cb0f-426c-a539-1cffc13df0ee}</Project>
@@ -212,7 +212,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="inmem.mm" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -221,9 +223,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Search\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
