--- a/Diagnosis.Client.App/packages.config
+++ b/Diagnosis.Client.App/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.3" targetFramework="net40" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
+  <package id="Kent.Boogaart.Converters" version="1.3.1" targetFramework="net40" />
+  <package id="Kent.Boogaart.HelperTrinity" version="1.5.2" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net40" />
   <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net40" />
