--- a/Diagnosis.Common.Presentation/packages.config
+++ b/Diagnosis.Common.Presentation/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="DataConnectionDialog" version="1.2" targetFramework="net40" />
   <package id="Extended.Wpf.Toolkit" version="2.3" targetFramework="net40" />
+  <package id="Kent.Boogaart.Converters" version="1.3.1" targetFramework="net40" />
+  <package id="Kent.Boogaart.HelperTrinity" version="1.5.2" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40" />
