--- a/Diagnosis.Server.App/packages.config
+++ b/Diagnosis.Server.App/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="FluentValidation" version="5.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
+  <package id="Kent.Boogaart.Converters" version="1.3.1" targetFramework="net40" />
+  <package id="Kent.Boogaart.HelperTrinity" version="1.5.2" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40" />
