--- a/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
+++ b/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
@@ -197,6 +197,9 @@
       <DependentUpon>UndoOverlay.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Common\UniformGridWithOrientation.cs" />
+    <Compile Include="Controls\Common\HyperlinkContextMenu.xaml.cs">
+      <DependentUpon>HyperlinkContextMenu.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Common\WrapPanelLastChildFill.cs" />
     <Compile Include="Controls\Filter.xaml.cs">
       <DependentUpon>Filter.xaml</DependentUpon>
@@ -264,6 +267,10 @@
     <Page Include="Controls\Common\UndoOverlay.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Common\HyperlinkContextMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\Filter.xaml">
       <Generator>MSBuild:Compile</Generator>
