--- a/Diagnosis.Data/packages.config
+++ b/Diagnosis.Data/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.3.1" targetFramework="net40" />
   <package id="FluentMigrator" version="1.3.1.0" targetFramework="net40" />
   <package id="FluentMigrator.Runner" version="1.3.1.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
