code. Move to folders

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -247,7 +247,7 @@
     <Compile Include="Controls\ConfirmPasswordViewModel.cs" />
     <Compile Include="Screens\HrCategoryViewModel.cs" />
     <Compile Include="Screens\Interfaces.cs" />
-    <Compile Include="Screens\QueryBlockViewModel.cs" />
+    <Compile Include="Screens\Search\QueryBlockViewModel.cs" />
     <Compile Include="Screens\SyncViewModel.cs" />
     <Compile Include="Screens\Shell\ServerMainWindowViewModel.cs" />
     <Compile Include="Screens\Uoms\UomEditorViewModel.cs" />
@@ -265,7 +265,7 @@
     <Compile Include="Screens\HealthRecords\ShortHealthRecordViewModel.cs" />
     <Compile Include="Screens\Patients\PatientViewModel.cs" />
     <Compile Include="Screens\HealthRecords\HrViewer.cs" />
-    <Compile Include="Screens\AdminSettingsViewModel.cs" />
+    <Compile Include="Screens\Settings\AdminSettingsViewModel.cs" />
     <Compile Include="Screens\Specialities\SpecialityListViewModel.cs" />
     <Compile Include="Screens\Specialities\SpecialityEditorViewModel.cs" />
     <Compile Include="Screens\Specialities\SpecialityViewModel.cs" />
@@ -284,11 +284,11 @@
     <Compile Include="Screens\Vocabularies\VocabularyViewModel.cs" />
     <Compile Include="Search\Exporter.cs" />
     <Compile Include="Autocomplete\IcdSelectorViewModel.cs" />
-    <Compile Include="Search\HrHolderSearchResultViewModel.cs" />
-    <Compile Include="Search\OptionsLoader.cs" />
-    <Compile Include="Search\SearchHistory.cs" />
-    <Compile Include="Search\SearchOptionsDTO.cs" />
-    <Compile Include="Search\SearchResultViewModel.cs" />
+    <Compile Include="Screens\Search\HolderSearchResultViewModel.cs" />
+    <Compile Include="Screens\Search\OptionsLoader.cs" />
+    <Compile Include="Screens\Search\SearchHistory.cs" />
+    <Compile Include="DataTransfer\SearchOptionsDTO.cs" />
+    <Compile Include="Screens\Search\SearchResultViewModel.cs" />
     <Compile Include="Search\Statistic.cs" />
     <Compile Include="Types\CheckableBase.cs" />
     <Compile Include="Screens\Card\Editors\AppointmentViewModel.cs" />
@@ -314,14 +314,14 @@
     <Compile Include="Screens\Shell\MenuBarViewModel.cs" />
     <Compile Include="Screens\Shell\PanelViewModel.cs" />
     <Compile Include="Screens\Shell\ScreenSwitcher.cs" />
-    <Compile Include="Screens\SearchViewModel.cs" />
-    <Compile Include="Screens\SettingsViewModel.cs" />
+    <Compile Include="Screens\Search\SearchViewModel.cs" />
+    <Compile Include="Screens\Settings\SettingsViewModel.cs" />
     <Compile Include="Screens\Words\WordsListViewModel.cs" />
     <Compile Include="Autocomplete\AutocompleteViewModel.cs" />
     <Compile Include="Autocomplete\Recognizer.cs" />
     <Compile Include="Autocomplete\TagViewModel.cs" />
     <Compile Include="Controls\FilterViewModel.cs" />
-    <Compile Include="Search\HrSearchOptions.cs" />
+    <Compile Include="Search\SearchOptions.cs" />
     <Compile Include="Controls\PopupSearchViewModel.cs" />
     <Compile Include="Search\HrSearcher.cs" />
     <Compile Include="Framework\ViewModelBase.cs" />
