hrlist. private hrManager

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -351,6 +351,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Screens\Card\CodeMap1.dgml" />
+    <None Include="Screens\HealthRecords\CodeMap1.dgml" />
     <None Include="Search\SearchClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup />
