autocomplete. Fix confidence copy on drag drop
--HG--
branch : f/SearchWConf

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -219,6 +219,7 @@
     <Compile Include="AuthorityController.cs" />
     <Compile Include="Autocomplete\AutocompleteViewModel - ClipboardTarget.cs" />
     <Compile Include="Autocomplete\AutocompleteViewModel - DragDrop.cs" />
+    <Compile Include="Autocomplete\Extensions.cs" />
     <Compile Include="Autocomplete\IAutocompleteViewModel.cs" />
     <Compile Include="Autocomplete\SuggestionViewModel.cs" />
     <Compile Include="Controls\Interfaces.cs" />
